--- a/Pages/Category/Edit.cshtml
+++ b/Pages/Category/Edit.cshtml
@@ -4,7 +4,7 @@
   Layout = "~/Pages/Management/Shared/_Layout.cshtml";
 
 }
-<h4>Category</h4>
+<h4>Categoria</h4>
 <hr />
 <div class="row">
   <div class="col-md-4">
