--- a/Pages/Management/Index.cshtml
+++ b/Pages/Management/Index.cshtml
@@ -5,4 +5,8 @@
     Layout = "~/Pages/Management/Shared/_Layout.cshtml";
 }
 
-  <h1>Administrativo</h1>
+  <div class="container-fluid justify-content-center align-content-center">  
+    <div class="row"> 
+    <h1>Administrativo</h1>
+    </div>
+  </div>
