--- a/Pages/Product/Category.cshtml
+++ b/Pages/Product/Category.cshtml
@@ -1,8 +1,8 @@
 ﻿
-@page 
-@model LojaVirtual.ProductViewModel
+@page "{handler?}/{id?}"
+@model LojaVirtual.Pages.Product.CategoryModel
 @{
-    ViewData["Title"] = "ProductView";
+    ViewData["Title"] = "Category";
 }
 <div class="container">
 
