--- a/Pages/Product/Edit.cshtml
+++ b/Pages/Product/Edit.cshtml
@@ -9,7 +9,7 @@
 
 <h1>Edit</h1>
 
-<component type="typeof(Product.Components.ProductFormCreate)" param-Product="@Model.Product" render-mode="ServerPrerendered"/> 
+<component type="typeof(Product.Components.ProductForm)" param-Product="@Model.Product" render-mode="ServerPrerendered"/> 
 
 <div>
     <a asp-page="./Index">Voltar</a>
