--- a/Pages/Shared/_NavBar.cshtml
+++ b/Pages/Shared/_NavBar.cshtml
@@ -1,66 +1,66 @@
 ﻿@page
 @model LojaVirtual._NavBarModel
 @*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
+  For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
 <!-- #region NavBar -->
 
 
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-0" >
-    <div class="container">
-        <a class="navbar-brand text-light" asp-area="" asp-page="/Index">LojaVirtual</a>
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-0">
+  <div class="container">
+    <a class="navbar-brand text-light" asp-area="" asp-page="/Index">LojaVirtual</a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-            <partial name="_LoginPartial" model="new LoginModel()" />
-            <ul class="navbar-nav flex-grow-1">
+    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+      <partial name="_LoginPartial" model="new _LoginPartialModel()" />
+      <ul class="navbar-nav flex-grow-1">
 
-                <!-- #region Home -->
-                <li class="nav-item">
-                    <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
-                </li>
-                <!-- #endregion -->
-                <!-- #region Categories -->
-                <li class="nav-item">
-                    <div class="dropdown border-0">
-                        <button class="btn dropdown-toggle nav-link text-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Categorias
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            @{
-                                using (Models.LojaVirtualContext lojaVirtualContext = new Models.LojaVirtualContext())
-                                {
-                                    foreach (var item in lojaVirtualContext.Categories)
-                                    {
-                                        <a asp-page="/Product/ProductView" asp-page-handler="Get" asp-route-id="@item.CategoryId" class="dropdown-item">@item.Name</a>
-                                    }
-                                }
-                            }
-                        </div>
-                    </div>
-                </li>
-                <!-- #endregion -->
-                @if (LoginManagement.IsLogged)
+        <!-- #region Home -->
+        @*<li class="nav-item">
+              <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
+          </li>*@
+        <!-- #endregion -->
+        <!-- #region Categories -->
+        <li class="nav-item">
+          <div class="dropdown border-0">
+            <button class="btn dropdown-toggle nav-link text-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Categorias
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              @{
+                using (Models.LojaVirtualContext lojaVirtualContext = new Models.LojaVirtualContext())
                 {
-                    if (LoginManagement.TempUser.IsAdmin)
-                    {
-                       <li class="nav-item m-1 row">
-                            <a asp-page="/Management/Index" asp-page-handler="" class="nav-link text-light">
-                                <span class="fas fa-eye" style="font-size: 1em;">
-                                </span>
-                                Administrativo
-                            </a>
-                        </li>
-                    }
+                  foreach (var item in lojaVirtualContext.Categories)
+                  {
+                    <a asp-page="/Product/Category" asp-page-handler="Get" asp-route-id="@item.CategoryId" class="dropdown-item">@item.Name</a>
+                  }
                 }
-            </ul>
-        </div>
+              }
+            </div>
+          </div>
+        </li>
+        <!-- #endregion -->
+        @if (LoginManagement.IsLogged)
+        {
+          if (LoginManagement.TempUser.IsAdmin)
+          {
+            <li class="nav-item m-1 row">
+              <a asp-page="/Management/Index" asp-page-handler="" class="nav-link text-light">
+                <span class="fas fa-eye" style="font-size: 1em;">
+                </span>
+                Administrativo
+              </a>
+            </li>
+          }
+        }
+      </ul>
     </div>
+  </div>
 </nav>
 
 
