--- a/Pages/Shopping-Cart/Shared/_ShoppingCartContent.cshtml
+++ b/Pages/Shopping-Cart/Shared/_ShoppingCartContent.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model LojaVirtual._ShoppingCartContentModel
+@model LojaVirtual.Pages.Shopping_Cart.Shared._ShoppingCartContentModel
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
