--- a/Pages/Product/Create.cshtml
+++ b/Pages/Product/Create.cshtml
@@ -8,7 +8,7 @@
 }
 
 <div class="container mb-2">
-  <component type="typeof(Product.Components.ProductFormCreate)" render-mode="Server" />
+  <component type="typeof(Product.Components.ProductForm)" render-mode="ServerPrerendered" />
   @* Localizar *@
   <a asp-page="Index" class="btn btn-danger">Voltar à Lista</a>
 </div>
