--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "{handler?}"
 
-@model LojaVirtual.LoginModel
+@model LojaVirtual._LoginPartialModel
 @*
   For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -53,17 +53,17 @@
 
 </ul>
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" style="min-width: 600px;">
+  <div class="modal-dialog" role="document" >
     <div class="modal-content" style="background-color: transparent; border-color: transparent;">
       <div class="modal-body" style="background-color: transparent;">
         <div class="container-fluid">
           <div class="row">
             <div class="card w-100">
-              <div class="card-body">
+              <div class="card-body p-3">
 
                 <h5 class="card-title text-center">Conectar</h5>
-                <form method="post" role="form" class="form-horizontal m-auto">
+                <form method="post" asp-page-handler="login" asp-page="/Shared/_LoginPartial" class="form-horizontal m-auto">
                   @Html.AntiForgeryToken()
 
                   <hr />
@@ -71,18 +71,18 @@
                   @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
                   <div class="form-group">
-                    @Html.LabelFor(m => m.tempUser.Name, new { @class = "control-label" })
+                    @Html.LabelFor(m => m.UserData.Name, new { @class = "control-label" })
                     <div class="row mx-1">
-                      @Html.TextBoxFor(m => m.tempUser.Name, new { @class = "form-control" })
-                      @Html.ValidationMessageFor(m => m.tempUser.Name, "", new { @class = "text-danger" })
+                      @Html.TextBoxFor(m => m.UserData.Name, new { @class = "form-control" })
+                      @Html.ValidationMessageFor(m => m.UserData.Name, "", new { @class = "text-danger" })
                     </div>
                   </div>
 
                   <div class="form-group">
-                    @Html.LabelFor(m => m.tempUser.Password, new { @class = "control-label" })
+                    @Html.LabelFor(m => m.UserData.Password, new { @class = "control-label" })
                     <div class="row mx-1">
-                      @Html.PasswordFor(m => m.tempUser.Password, new { @class = "form-control" })
-                      @Html.ValidationMessageFor(m => m.tempUser.Password, "", new { @class = "text-danger" })
+                      @Html.PasswordFor(m => m.UserData.Password, new { @class = "form-control" })
+                      @Html.ValidationMessageFor(m => m.UserData.Password, "", new { @class = "text-danger" })
                     </div>
                   </div>
 
@@ -90,11 +90,14 @@
                     <input type="checkbox" class="custom-control-input" id="customCheck1">
                     <label class="custom-control-label" for="customCheck1">Lembrar Senha</label>
                   </div>
-
-                  <button class="btn btn-lg btn-primary btn-block text-uppercase" asp-page-handler="LogIn" asp-page="/User/Login" type="submit">Conectar</button>
                   <hr class="my-4">
-                  <button class="btn btn-lg  btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Conectar com Google</button>
-                  <button class="btn btn-lg  btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Conectar com Facebook</button>
+                  
+                  <button class="btn btn-lg btn-primary btn-block text-uppercase"   type="submit">Conectar</button>
+                  <hr class="my-4">
+
+                  @*TODO: FACEBOOK AND GOOGLE LOGIN *@
+                  @*<button class="btn btn-lg  btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Conectar com Google</button>
+    <button class="btn btn-lg  btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Conectar com Facebook</button>*@
 
                 </form>
               </div>
