--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 
   <!-- #endregion -->
   <!-- #region Body -->
-  <div class="container">
+  <div class="container-fluid">
     <main role="main" class="pb-3">
       @RenderBody()
     </main>
