--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,9 +11,24 @@ a.navbar-brand {
   word-break: break-all;
 }
 
+body{
+    height: 100%;
+}
+
 /* Provide sufficient contrast against white background */
 a {
   color: #0366d6;
+  
+}
+
+.card.product-card   {
+    height: 600px;
+    background-color: #C6C6C6;
+}
+
+img.product-card-image {
+    height: 300px;
+    object-fit: scale-down; 
 }
 
 .nounderline {
@@ -21,13 +36,13 @@ a {
 }
 .btn-primary {
   color: #fff;
-  background-color: #1b6ec2;
+  background-color: #3A7EC3;
   border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #1b6ec2;
+  background-color: #3880C9;
   border-color: #1861ac;
 }
 
@@ -36,6 +51,7 @@ a {
 html {
   font-size: 14px;
 }
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -65,10 +81,6 @@ html {
   min-height: 100%;
 }
 
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
 .footer {
   position: absolute;
   bottom: 0;
@@ -76,3 +88,4 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
