--- a/Pages/Product/ProductDetail.cshtml
+++ b/Pages/Product/ProductDetail.cshtml
@@ -5,7 +5,7 @@
   ViewData["Title"] = "ProductDetail";
 }
 
-<div class="container-fluid ">
+<div class="container">
 
   <div class="row card">
     @if (@Model.Product.ProductImage != null && Model.Product.Images != null && Model.Product.Images.Count > 0)
